--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <body>
     <canvas id="canvas"></canvas>
     <button onClick="onMouseClick(-10)"> Левая </button>
-    <button onClick="onMouseClick(+10)"> Правая </button>
+    <button onClick="onMouseClick(10)"> Правая </button>
   </body>
 </html>
