--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <canvas id="canvas"></canvas><br>
     <button onClick="onMouseClick(-10)"> Левая </button>
     <button onClick="onMouseClick(10)"> Правая </button>
-    <script src="/canvas.js"> </script>
+    <script src="canvas.js"> </script>
   </body>
 </html>
   
