--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head> 
   <body>
-    <canvas id="canvas"></canvas><br>
+    <canvas id="canvas"></canvas>
     <button onClick="onMouseClick(-10)"> Левая </button>
     <button onClick="onMouseClick(10)"> Правая </button>
     <script >
