--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"> </script>
     <title>Socket.IO chat</title>
     <style>
-      #canvas {border: solid 1px black;position: absolute; background-color: lightblue;}
+      #canvas {border: solid 1px black; background-color: lightblue;}
     </style>
   </head> 
   <body>
