--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           var spriteSheet = new createjs.SpriteSheet(data);
           var sprite = new createjs.Sprite(spriteSheet, 1);
           stage.addChild(sprite);
-            sprite.x = canvas.width/2 -60
-            sprite.y = canvas.height/2 -60
+            sprite.x = canvas.width/2 -60;
+            sprite.y = canvas.height/2 -60;
             createjs.Ticker.addEventListener("tick", onTickHandler);
 
           function onTickHandler(evt) {   
@@ -41,6 +41,8 @@
             function onResize() {
               canvas.width = window.innerWidth;
               canvas.height = window.innerHeight;
+              sprite.x = canvas.width/2 -60;
+              sprite.y = canvas.height/2 -60;
             };
 
           function onMouseClick(val) {
