--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             onResize();
 
             function onResize() {
-              canvas.width = window.innerWidth;
-              canvas.height = window.innerHeight;
+              canvas.width = window.innerWidth-300;
+              canvas.height = window.innerHeight-300;
               sprite.x = canvas.width/2 -60;
               sprite.y = canvas.height/2 -60;
             };
