--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head> 
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas"></canvas><br>
     <button onClick="onMouseClick(-20)"> Левая </button>
     <button onClick="onMouseClick(20)"> Правая </button>
     <script >
