--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://code.createjs.com/easeljs-0.8.0.min.js"> </script>
     <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"> </script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"> </script>
-    <title>Socket.IO chat</title>
+    <title>Canvas Animation</title>
     <style>
       #canvas {border: solid 1px black; background-color: lightblue;}
     </style>
