--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Main page</title>
   </head> 
   <body>
-    <a href="/in.html"> Интерфейс управления </a>
+    <a href="/in.html"> Интерфейс управления </a> <br>
     <a href="/out.html"> Страница с анимацией </a>
   </body>
 </html>
