--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Main page</title>
   </head> 
   <body>
-    <a href="/in.html"> Интерфейс управления </a> <br>
-    <a href="/out.html"> Страница с анимацией </a>
+    <a href="/in">Интерфейс управления</a> <br>
+    <a href="/out">Страница с анимацией</a>
   </body>
 </html>
   
