--- a/out.html
+++ b/out.html
@@ -39,10 +39,8 @@
               sprite.y = canvas.height/2 -60;
             };
           socket.on('button clicked', function(value){
-            sprite.x += val; 
-            //ChangeSpritePosition(value);	
+            sprite.x += value;        
           });
-         // function ChangeSpritePosition(val){};
     </script>
   </body>
 </html>
