--- a/days/day21.html
+++ b/days/day21.html
@@ -32,21 +32,22 @@
       socket.on('user connected', function(UserName, UserId){
         console.log(UserName);
         //user = UserName;            
-          window[UserName] = new createjs.Sprite(spriteSheet, 1);
-          stage.addChild(window[UserName]);
+          window["UserName"] = new createjs.Sprite(spriteSheet, 1);
+          stage.addChild(window["UserName"]);
           if (vertical < canvas.height-140){
-            window[UserName].x = horizontal;
-            window[UserName].y = vertical;
+            window["UserName"].x = horizontal;
+            window["UserName".y = vertical;
+            console.log(window["UserName"].x);
           }
           else {
             vertical = 20;
             horizontal += 120;
           }
           if (horizontal >= canvas.width-139){
-            window[UserName].x = horizontal;
-            window[UserName].y = vertical;
+            window["UserName"].x = horizontal;
+            window["UserName"].y = vertical;
           }
-          ctx.fillText(name.UserName, window[UserName].x+50, window[UserName].y-12);
+          ctx.fillText(name.UserName, window["UserName"].x+50, window["UserName"].y-12);
           vertical += 120;
           createjs.Ticker.addEventListener("tick", onTickHandler);
       });
@@ -55,7 +56,7 @@
         socket.emit('button clicked', val)
       };
       socket.on('button clicked', function(UserName, value){
-          window["UserName"].x += value;        
+          UserName.x += value;        
         });
         function onTickHandler(evt) {   
             stage.update();
