--- a/days/day21.html
+++ b/days/day21.html
@@ -36,7 +36,7 @@
           stage.addChild(window["UserName"]);
           if (vertical < canvas.height-140){
             window["UserName"].x = horizontal;
-            window["UserName".y = vertical;
+            window["UserName"].y = vertical;
             console.log(window["UserName"].x);
           }
           else {
