--- a/days/day21.html
+++ b/days/day21.html
@@ -29,9 +29,7 @@
       images: ["http://savepic.ru/13767000.png"],
       frames: {width: 120, height: 120, count: 24},
       animations: {sit: (Math.random() * (24 - 1) + 1)}});
-      socket.on('user connected', function(UserName, UserId){
-        console.log(window[UserName]);
-        //user = UserName;            
+      socket.on('user connected', function(UserName, UserId){           
           window["UserName"] = new createjs.Sprite(spriteSheet, 1);
           stage.addChild(window["UserName"]);
           if (vertical < canvas.height-140){
@@ -47,7 +45,7 @@
             window["UserName"].x = horizontal;
             window["UserName"].y = vertical;
           }
-          ctx.fillText(window["UserName"], window["UserName"].x+50, window["UserName"].y-12);
+          ctx.fillText(UserName, window["UserName"].x+50, window["UserName"].y-12);
           vertical += 120;
           createjs.Ticker.addEventListener("tick", onTickHandler);
       });
