--- a/days/day21.html
+++ b/days/day21.html
@@ -45,7 +45,7 @@
             window["UserName"].x = horizontal;
             window["UserName"].y = vertical;
           }
-          ctx.fillText(window["UserName"], window["UserName"].x+40, window["UserName"].y-12);
+          ctx.fillText(UserName, window["UserName"].x+40, window["UserName"].y-12);
           vertical += 120;
           createjs.Ticker.addEventListener("tick", onTickHandler);
       });
