--- a/days/day21.html
+++ b/days/day21.html
@@ -30,21 +30,21 @@
       animations: {stand: 3}});
       socket.on('user connected', function(UserId){ 
           var name = 'U' + UserId.toString().substr(1, 4);
-          window["UserId"] = new createjs.Sprite(spriteSheet, 1);
-          stage.addChild(window["UserId"]);
+          window[UserId] = new createjs.Sprite(spriteSheet, 1);
+          stage.addChild(window[UserId]);
           if (vertical < canvas.height-140){
-            window["UserId"].x = horizontal;
-            window["UserId"].y = vertical;
+            window[UserId].x = horizontal;
+            window[UserId].y = vertical;
           }
           else {
             vertical = 20;
             horizontal += 120;
           }
           if (horizontal >= canvas.width-139){
-            window["UserId"].x = horizontal;
-            window["UserId"].y = vertical;
+            window[UserId].x = horizontal;
+            window[UserId].y = vertical;
           }
-          ctx.fillText(name, window["UserId"].x+40, window["UserId"].y-12);
+          ctx.fillText(name, window[UserId].x+40, window[UserId].y-12);
           vertical += 120;
           createjs.Ticker.addEventListener("tick", onTickHandler);
       });
@@ -53,7 +53,7 @@
         socket.emit('button clicked', val)
       };
       socket.on('button clicked', function(UserId, value){
-          window["UserId"].x += value;        
+          window[UserId].x += value;        
         });
         function onTickHandler(evt) {   
             stage.update();
