--- a/days/day21.html
+++ b/days/day21.html
@@ -21,8 +21,8 @@
           ctx.font = "bold 10px sans-serif";
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
-      var vertical = 20;
-      var horizontal = 20;
+      //var vertical = 20;
+      //var horizontal = 20;
       var counter = 0;
       var spriteSheet = new createjs.SpriteSheet({
       images: ["http://savepic.ru/13767000.png"],
@@ -33,10 +33,10 @@
           window[UserId] = new createjs.Sprite(spriteSheet, 1);
         console.log(UserId);
           stage.addChild(window[UserId]);
-          if (vertical < canvas.height-140){
-            window[UserId].x = horizontal;
-            window[UserId].y = vertical;
-          }
+          //if (vertical < canvas.height-140){
+            window[UserId].x = RandomNumb(20,canvas.width-140);
+            window[UserId].y = RandomNumb(20,canvas.height-140)vertical;
+          /*}
           else {
             vertical = 20;
             horizontal += 120;
@@ -44,7 +44,7 @@
           if (horizontal >= canvas.width-139){
             window[UserId].x = horizontal;
             window[UserId].y = vertical;
-          }
+          }*/
           ctx.fillText(name, window[UserId].x+40, window[UserId].y-12);
           vertical += 120;
           createjs.Ticker.addEventListener("tick", onTickHandler);
@@ -65,6 +65,9 @@
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
         };
+        function RandomNumb(min, max){
+          return Math.random() * (max - min) + min;
+        }
 
     </script>
   </body>
