--- a/days/day21.html
+++ b/days/day21.html
@@ -35,7 +35,7 @@
           stage.addChild(window[UserId]);
           //if (vertical < canvas.height-140){
             window[UserId].x = RandomNumb(20,canvas.width-140);
-            window[UserId].y = RandomNumb(20,canvas.height-140)vertical;
+            window[UserId].y = RandomNumb(20,canvas.height-140);
           /*}
           else {
             vertical = 20;
