--- a/days/day21.html
+++ b/days/day21.html
@@ -46,7 +46,7 @@
             window[UserId].y = vertical;
           }*/
           ctx.fillText(name, window[UserId].x+40, window[UserId].y-12);
-          vertical += 120;
+          //vertical += 120;
           createjs.Ticker.addEventListener("tick", onTickHandler);
       });
        
