--- a/days/day21.html
+++ b/days/day21.html
@@ -53,6 +53,7 @@
         socket.emit('button clicked', val)
       };
       socket.on('button clicked', function(UserId, value){
+            console.log(UserId);
           window[UserId].x += value;        
         });
         function onTickHandler(evt) {   
