--- a/days/day21.html
+++ b/days/day21.html
@@ -62,7 +62,7 @@
         function RandomNumb(min, max){
           return Math.random() * (max - min) + min;
         }
-      socket.on('user base', function(users){
+      socket.on('users base', function(users){
         console.log(users);
           //for(user in users){
              // CreateSprite(user, users[user].x, users[user].y);
