--- a/days/day21.html
+++ b/days/day21.html
@@ -63,10 +63,9 @@
           return Math.random() * (max - min) + min;
         }
       socket.on('users base', function(users){
-        console.log(users);
-          //for(user in users){
-             // CreateSprite(user, users[user].x, users[user].y);
-         // }       
+          for(user in users){
+              CreateSprite(user, users[user].x, users[user].y);
+          }       
       });
        function CreateSprite(Id,X,Y){
         var spriteSheet = new createjs.SpriteSheet({
