--- a/out.html
+++ b/out.html
@@ -38,7 +38,7 @@
               sprite.x = canvas.width/2 -60;
               sprite.y = canvas.height/2 -60;
             };
-          socket.on('button clicked', function(value){
+          socket.on('button clicked', function(UserId, value){
             sprite.x += value;        
           });
     </script>
