--- a/out.html
+++ b/out.html
@@ -27,8 +27,9 @@
           sprite.x = canvas.width/2 -60;
           sprite.y = canvas.height/2 -60;
           createjs.Ticker.addEventListener("tick", onTickHandler);
-          
+          console.log('wtf');
           socket.on('day20', function(value){
+            alert(value);
             console.log(value);
             sprite.x += value;        
           });
