--- a/in.html
+++ b/in.html
@@ -10,7 +10,7 @@
       <script >
           var socket = io();
           function onMouseClick(val) {
-            socket.emit('button clicked', val);
+            socket.emit('soloanim', val);
           };
       </script>
   </body>
