--- a/days/day22.html
+++ b/days/day22.html
@@ -10,7 +10,7 @@
     </style>
   </head> 
   <body>
-    <canvas id="canvas"></canvas><br>
+    <canvas id="canvas"></canvas>
     <script >
       var socket = io();
           stage = new createjs.Stage("canvas");
@@ -24,7 +24,6 @@
             animations: {stand: 3}});
         var name = 'U' + UserId.toString().substr(1, 4);
         window[UserId] = new createjs.Sprite(spriteSheet, 1);
-        console.log(UserId);
         stage.addChild(window[UserId]);
         window[UserId].x = RandomNumb(20,canvas.width-140);
         window[UserId].y = RandomNumb(20,canvas.height-140);
