--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -29,7 +29,7 @@
         createjs.Ticker.addEventListener("tick", onTickHandler);
         //socket.emit('user controler done',  window[UserId].x,  window[UserId].y)
       });
-      window[UserId].addEventListener("mousedown"), function(evt){
+      window[UserId].addEventListener("mousedown", function(evt){
               window[UserId].getBounds();
       });
        
