--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -18,19 +18,20 @@
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
       socket.on('user controler', function(UserId, X, Y){ 
+        var ID = UserId;
         var spriteSheet = new createjs.SpriteSheet({
             images: ["http://savepic.ru/13767000.png"],
             frames: {width: 120, height: 120, count: 24},
             animations: {stand: 3}});
-        window[UserId] = new createjs.Sprite(spriteSheet, 1);
-        stage.addChild(window[UserId]);
-        window[UserId].x = X;
-        window[UserId].y = Y;
+        window[ID] = new createjs.Sprite(spriteSheet, 1);
+        stage.addChild(window[ID]);
+        window[ID].x = X;
+        windowID].y = Y;
         createjs.Ticker.addEventListener("tick", onTickHandler);
         //socket.emit('user controler done',  window[UserId].x,  window[UserId].y)
       });
-      window[UserId].addEventListener("mousedown", function(evt){
-              window[UserId].getBounds();
+      window[ID].addEventListener("mousedown", function(evt){
+              window[ID].getBounds();
       });
        
       
