--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -26,7 +26,7 @@
         window[ID] = new createjs.Sprite(spriteSheet, 1);
         stage.addChild(window[ID]);
         window[ID].x = X;
-        windowID].y = Y;
+        window[ID].y = Y;
         createjs.Ticker.addEventListener("tick", onTickHandler);
         //socket.emit('user controler done',  window[UserId].x,  window[UserId].y)
       });
