--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -31,7 +31,7 @@
         createjs.Ticker.addEventListener("tick", onTickHandler);
         //socket.emit('user controler done',  window[UserId].x,  window[UserId].y)
       });
-      window[ID].addEventListener("mousedown", function(evt){
+      window[ID].addEventListener("click", function(evt){
               window[ID].getBounds();
       });
        
