--- a/days/day22.html
+++ b/days/day22.html
@@ -12,7 +12,7 @@
   <body>
     <canvas id="canvas"></canvas>
     <script >
-      var socket = io();
+      var socket = io(location.origin);
           stage = new createjs.Stage("canvas");
           canvas = document.querySelector('canvas');
           canvas.width = window.innerWidth-50;
