--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -13,7 +13,7 @@
     <canvas id="canvas"></canvas>
     <script >
       var socket = io(location.origin);
-      var ID;
+      var sprite;
           stage = new createjs.Stage("canvas");
           canvas = document.querySelector('canvas');
           canvas.width = window.innerWidth-50;
