--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -18,7 +18,7 @@
           canvas = document.querySelector('canvas');
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
-      socket.on('user done', function(X, Y){ 
+      socket.on('coords for contoler', function(X, Y){ 
         var spriteSheet = new createjs.SpriteSheet({
             images: ["http://savepic.ru/13767000.png"],
             frames: {width: 120, height: 120, count: 24},
