--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -20,6 +20,7 @@
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
       socket.on('coords for contoler', function(X, Y){ 
+        console.log('yes');
         //ID = UserId;
         var spriteSheet = new createjs.SpriteSheet({
             images: ["http://savepic.ru/13767000.png"],
