--- a/days/day22.html
+++ b/days/day22.html
@@ -33,6 +33,7 @@
       });
        
       socket.on('user done', function(coordx,coordy, userid){
+        console.log('yes1');
          CreateSprite(userid,coordx,coordy);
       });
       
