--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -36,7 +36,7 @@
         createjs.Ticker.addEventListener("tick", onTickHandler);
         //socket.emit('user controler done',  window[UserId].x,  window[UserId].y)
       });
-      ID.on("stagemousedown", function(evt){
+      window[ID].on("stagemousedown", function(evt){
             sprite.getBounds();
       });
        
