--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -33,7 +33,7 @@
         createjs.Ticker.addEventListener("tick", onTickHandler);
         //socket.emit('user controler done',  window[UserId].x,  window[UserId].y)
       });
-      sprite.on("stagemousedown", function(evt){
+      stage.on("pressmove", function(evt){
              sprite.getBounds();
       });
        
