--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -14,7 +14,7 @@
     <script >
       var socket = io(location.origin);
       var ID;
-      //var sprite;
+      var sprite;
           stage = new createjs.Stage("canvas");
           canvas = document.querySelector('canvas');
           canvas.width = window.innerWidth-50;
@@ -26,14 +26,14 @@
             images: ["http://savepic.ru/13767000.png"],
             frames: {width: 120, height: 120, count: 24},
             animations: {stand: 3}});
-        var sprite = new createjs.Sprite(spriteSheet, 1);
+        sprite = new createjs.Sprite(spriteSheet, 1);
         stage.addChild(sprite);
         sprite.x = X;
         sprite.y = Y;
         createjs.Ticker.addEventListener("tick", onTickHandler);
         //socket.emit('user controler done',  window[UserId].x,  window[UserId].y)
       });
-      sprite.addEventListener("mousedown", function(evt){
+      stage.addEventListener("stagemousedown", function(evt){
              sprite.getBounds();
       });
        
