--- a/days/day22.html
+++ b/days/day22.html
@@ -18,12 +18,8 @@
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
       socket.on('user connected', function(UserId){ 
-        var spriteSheet = new createjs.SpriteSheet({
-            images: ["http://savepic.ru/13767000.png"],
-            frames: {width: 120, height: 120, count: 24},
-            animations: {stand: 3}});
-        window[UserId] = new createjs.Sprite(spriteSheet, 1);
-        console.log(UserId);
+        var window[UserId] = new createjs.Shape();
+        window[UserId].graphics.beginFill("Crimson").drawRoundRectComplex(0, 0, 40, 65, 20,20,35,35);     
         stage.addChild(window[UserId]);
         window[UserId].x = RandomNumb(20,canvas.width-140);
         window[UserId].y = RandomNumb(20,canvas.height-140);
